@@ -24,7 +24,6 @@
 #include "setup.h"
 
 #include <string.h>
-#include <errno.h>
 
 #ifdef HAVE_MALLOC_H
 #include <malloc.h>
